protótipo de curriculo feito

--- a/index.html
+++ b/index.html
@@ -47,15 +47,15 @@
               </p>
               <p>Html</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
               </div>
               <p>Css</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
               </div>
               <p>JavaScript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:60%">60%</div>
               </div>
               <p>Sass</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
@@ -63,7 +63,7 @@
               </div>
               <p>Git</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:70%">70%</div>
               </div>
               <br>
   
@@ -76,7 +76,7 @@
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:65%"></div>
+                <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
@@ -94,7 +94,14 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
-            <p>TODO</p>
+            <p>
+              Sou o Victor Luiz, um desenvolvedor de software front-end com habilidades em HTML 5, CSS 3 e JavaScript intermediário,
+              além de SASS. Com experiência como Estagiário em Desenvolvimento de Software Web na Raccoon Marketing Digital, tenho
+              trabalhado em projetos pessoais e profissionais, criando sites elegantes e responsivos. Minhas realizações mais
+              notáveis incluem o desenvolvimento de sites para empresas em diferentes segmentos de mercado. Atualmente, estou
+              procurando novas oportunidades desafiadoras na área de desenvolvimento front-end, onde eu possa aplicar minhas
+              habilidades e experiência para fazer a diferença.
+            </p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
@@ -102,15 +109,27 @@
               <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Desenvolvedor Front End estágio</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10/2022 - 02/2023</h6>
+              <p>
+                Desenvolver sites, blogs, e Single Pages Aplications utilizando de linguagens de marcação e programação voltadas para web.
+              </p>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Qa tester estágio</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>04/2022 - 04/2022</h6>
+              <p>
+                realizar os teste funcionais e não funcionais de sistemas de consórcio, tanto em versões mobile quanto em web
+              </p>
+              <hr>
+            </div>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Educador estágio</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10/2021 - 04/2022</h6>
+              <p>
+                Realizar a correção de Apostilas dos mais variados temas, tirar dúvidas e prezar pela manutenção e limpeza de um laboratório de aula.
+              </p>
             </div>
           </div>
   
@@ -120,23 +139,60 @@
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12/2019 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
                 de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
               </p>
               <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
+                <li><a href="https://www.dio.me/certificate/43336C5C/share" target="_blank">Introdução ao Desenvolvimento Web com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/797848E7/share" target="_blank">Importação e Exportação com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/2B1FDFC1/share" target="_blank">Criando Objetos e Classes em JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/C3D37763/share" target="_blank">JavaScript ES6 essencial</a></li>
+                <li><a href="https://www.dio.me/certificate/0459A23B/share" target="_blank">Debugging e Error Handling com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/B015688A/share" target="_blank">Fundamentos de JavaScript Assíncrono</a></li>
+                <li><a href="https://www.dio.me/certificate/9243C2CF/share" target="_blank">Arrays e Estruturas de Repetição em JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/02F52577/share" target="_blank">Mapas e Conjuntos com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/8B3FA67A/share" target="_blank">Dominando Funções em JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/3E28BD39/share" target="_blank">Manipulando a D.O.M. com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/377D93E2/share" target="_blank">Trabalhando com Módulos em JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/8B9B6FFF/share" target="_blank">Orientação a Objetos com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/278F2AC2/share" target="_blank">Programação para internet com JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/52A3DA1E/share" target="_blank">Sintaxe e Operadores JavaScript</a></li>
+                <li><a href="https://www.dio.me/certificate/B65CB579/share" target="_blank">Primeiros Passos com Git e GitHub</a></li>
+                <li><a href="https://www.dio.me/certificate/34BB793C/share" target="_blank">Aprenda o que são Estrutura de Dados e Algoritmos</a></li>
+                <li><a href="https://www.dio.me/certificate/7A65BD5D/share" target="_blank">Introdução ao Desenvolvimento Moderno de Software</a></li>
+                <li><a href="https://www.dio.me/certificate/A609C04F/share" target="_blank">Como funciona o async/await</a></li>
+                <li><a href="https://www.dio.me/certificate/647C60F5/share" target="_blank">Princípios de Agilidade e Desenvolvimento de Software</a></li>
+                <li><a href="https://www.dio.me/certificate/DB52FE44/share" target="_blank">Entendendo Promises de uma vez por todas</a></li>
+                <li><a href="https://www.dio.me/certificate/57E27740/share" target="_blank">Map, Filter e Reduce</a></li>
+                <li><a href="https://www.dio.me/certificate/24A2CC86/share" target="_blank">Fundamentos de Qualidade de Software</a></li>
+                <li><a href="https://www.dio.me/certificate/18DF3CE7/share" target="_blank">Conceitos de responsividade e experiência do usuário</a></li>
+                <li><a href="https://www.dio.me/certificate/16D8DEEF/share" target="_blank">Pensamento Computacional</a></li>
               </ul>
               <hr>
             </div>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
+              <h5 class="w3-opacity"><b>Fatec Professor José Camargo - Fatec Jales</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06/2020 - 06/2023</h6>
+              <p>técnologo em Análise e Desenvolvimento de Sistemas</p>
+            </div>
+            <hr>
+            <div class="w3-container">
+              <h5 class="w3-opacity"><b>Udemy</b></h5>
+              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01/2023 - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
+              <p>
+                Maior e mais conceitual plataforma de educação em TI do mundo, com mais 1 milhão de usuários.
+                A Udemy é uma plataforma de cursos online que proporciona cursos gratuitos e pagos, entregando conteudos condizentes
+                com a necessidade do mercado. Nesse contexto, seguem meus principais certificados:
+              </p>
+              <ul>
+                <li>
+                  <a href="https://www.udemy.com/course/javascript-simples-e-pratico/learn/lecture/36976682?start=15#content" target="_blank">JavaScript simples e prático</a>
+                </li>
+              </ul>
+              <hr>
             </div>
           </div>
 
@@ -147,17 +203,22 @@
             <div class="w3-container">
               <h6 class="w3-text-teal">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
-                <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
+                <a href="https://github.com/VictorSR117/JSDigialInovationOne" target="_blank">VictorSR117/JSDigialInovationOne</a>
               </h6>
-              <p>TODO</p>
+              <p>Conteúdos desenvolvidos ao longo das aulas de cursos de JavaScript na Dio</p>
               <hr>
-            </div>
-            <div class="w3-container">
               <h6 class="w3-text-teal">
-                <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
-                <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/VictorSR117/projetos-pessoais" target="_blank">VictorSR117/projetos-pessoais</a>
               </h6>
-              <p>TODO</p>
+              <p>Projetos dos mais váriados tipos desenvolvidos para treinar a lógica em JavaScript e desenvolvimento web no geral</p>
+              <hr>
+              <h6 class="w3-text-teal">
+                <i class="fa fa-github fa-fw w3-margin-right"></i>
+                <a href="https://github.com/VictorSR117/curso-front-end---parcas-developers-School/tree/main/curso%20full%20stack/projetos" target="_blank">VictorSR117/curso-front-end---parcas-developers-School</a>
+              </h6>
+              <p>Conteúdos desenvolvidos ao longo das aulas do curso de desenvolvimento web na Parças Developers Schools</p>
+              <hr>
             </div>
           </div>
   
@@ -172,11 +233,8 @@
   
     <footer class="w3-container w3-teal w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
-      <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
-      <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
-      <a href="LINK_FACEBOOK" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-      <a href="LINK_INSTAGRAM" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-      <a href="LINK_TWITTER" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      <a href="https://github.com/VictorSR117" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
+      <a href="https://www.linkedin.com/in/victor-luiz-68094b1a5/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </footer>
   
