protótipo completo em tema -indigo

--- a/index.html
+++ b/index.html
@@ -37,51 +37,51 @@
               <h2>Victor Luiz Lopes da Silva</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Front End Developer</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>São Paulo - SP</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>victor.silva208@fatec.sp.gov.br</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>(11) 98323-8181</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-indigo"></i>Front End Developer</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-indigo"></i>São Paulo - SP</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-indigo"></i>victor.silva208@fatec.sp.gov.br</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-indigo"></i>(11) 98323-8181</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-blue"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-indigo"></i>Skills</b>
               </p>
               <p>Html</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
               </div>
               <p>Css</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
               </div>
               <p>JavaScript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:60%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:60%">60%</div>
               </div>
               <p>Sass</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:50%">50%</div>
               </div>
               <p>Git</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-blue" style="width:70%">70%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:70%">70%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-blue"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-indigo"></i>Idiomas</b>
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-blue" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:100%"></div>
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-blue" style="height:24px;width:55%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:55%"></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-blue" style="height:24px;width:10%"></div>
+                <div class="w3-round-xlarge w3-indigo" style="height:24px;width:10%"></div>
               </div>
               <br>
             </div>
@@ -94,7 +94,7 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Sobre</h2>
             <p>
               Sou o Victor Luiz, um desenvolvedor de software front-end com habilidades em HTML 5, CSS 3 e JavaScript intermediário,
               além de SASS. Com experiência como Estagiário em Desenvolvimento de Software Web na Raccoon Marketing Digital, tenho
@@ -107,11 +107,11 @@
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Experiências
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Desenvolvedor Front End estágio</b></h5>
-              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10/2022 - 02/2023</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10/2022 - 02/2023</h6>
               <p>
                 Desenvolver sites, blogs, e Single Pages Aplications utilizando de linguagens de marcação e programação voltadas para web.
               </p>
@@ -119,7 +119,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Qa tester estágio</b></h5>
-              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>04/2022 - 04/2022</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>04/2022 - 04/2022</h6>
               <p>
                 realizar os teste funcionais e não funcionais de sistemas de consórcio, tanto em versões mobile quanto em web
               </p>
@@ -127,7 +127,7 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Educador estágio</b></h5>
-              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10/2021 - 04/2022</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>10/2021 - 04/2022</h6>
               <p>
                 Realizar a correção de Apostilas dos mais variados temas, tirar dúvidas e prezar pela manutenção e limpeza de um laboratório de aula.
               </p>
@@ -136,11 +136,11 @@
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Educação
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12/2019 - <span class="w3-tag w3-blue w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12/2019 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
                 A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
@@ -176,13 +176,13 @@
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Fatec Professor José Camargo - Fatec Jales</b></h5>
-              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06/2020 - 06/2023</h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06/2020 - 06/2023</h6>
               <p>técnologo em Análise e Desenvolvimento de Sistemas</p>
             </div>
             <hr>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Udemy</b></h5>
-              <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01/2023 - <span class="w3-tag w3-blue w3-round">Atual</span></h6>
+              <h6 class="w3-text-indigo"><i class="fa fa-calendar fa-fw w3-margin-right"></i>01/2023 - <span class="w3-tag w3-indigo w3-round">Atual</span></h6>
               <p>
                 Maior e mais conceitual plataforma de educação em TI do mundo, com mais 1 milhão de usuários.
                 A Udemy é uma plataforma de cursos online que proporciona cursos gratuitos e pagos, entregando conteudos condizentes
@@ -199,22 +199,22 @@
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-indigo"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-blue">
+              <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/VictorSR117/JSDigialInovationOne" target="_blank">VictorSR117/JSDigialInovationOne</a>
               </h6>
               <p>Conteúdos desenvolvidos ao longo das aulas de cursos de JavaScript na Dio</p>
               <hr>
-              <h6 class="w3-text-blue">
+              <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/VictorSR117/projetos-pessoais" target="_blank">VictorSR117/projetos-pessoais</a>
               </h6>
               <p>Projetos dos mais váriados tipos desenvolvidos para treinar a lógica em JavaScript e desenvolvimento web no geral</p>
               <hr>
-              <h6 class="w3-text-blue">
+              <h6 class="w3-text-indigo">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="https://github.com/VictorSR117/curso-front-end---parcas-developers-School/tree/main/curso%20full%20stack/projetos" target="_blank">VictorSR117/curso-front-end---parcas-developers-School</a>
               </h6>
@@ -232,7 +232,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-blue w3-center w3-margin-top">
+    <footer class="w3-container w3-indigo w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="https://github.com/VictorSR117" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="https://www.linkedin.com/in/victor-luiz-68094b1a5/" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
