--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
               </p>
               <p>Html</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:88%">88%</div>
               </div>
               <p>Css</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:808">88%</div>
               </div>
               <p>JavaScript</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:60%">60%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3-indigo" style="width:79%">79%</div>
               </div>
               <p>Sass</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
